unfinished mappers and data base repository + fix namse avaLIable -> avILable
